# BookShelf-API-rs

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/repos/book/: inmemory.rs  mod.rs  sqlite.rs
src/services/: mod.rs
src/services/auth/: handler.rs  mod.rs
src/services/book/: handler.rs  mod.rs  repo.rs
src/services/book/test/: del.rs  get.rs  mod.rs  post.rs  put.rs
src/utils/: error.rs
