[package]
name = "BookShelf-API-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["tracing", "macros"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
chrono = { version = "0.4.42", features = ["serde"] }
http-body-util = "0.1.3"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
